feat(app): implement admin,members,packages

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL = "postgresql://naingaungzaw:password@localhost:5432/tdd_db"
+DATABASE_URL="postgresql://postgres:mypassword@150.95.24.71:5432/gym_db?schema=public"
 PORT = "3001"
 NODE_ENV = "development"
 JWT_SECRET_KEY="randomkey"
