--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@cucumber/cucumber": "^11.0.1",
+    "@mermaid-js/mermaid-cli": "^11.12.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -73,6 +74,7 @@
     "jest": "^29.5.0",
     "prettier": "^3.3.3",
     "prisma": "^5.22.0",
+    "prisma-erd-generator": "^2.3.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
