--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "seed": "prisma db seed",
+    "swagger:generate": "ts-node -r tsconfig-paths/register scripts/generate-swagger.ts"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@commitlint/types": "^19.5.0",
@@ -31,10 +36,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.5",
     "@prisma/client": "5.22.0",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
