--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.1.9",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^8.0.5",
+    "@nestjs/websockets": "^11.1.9",
     "@prisma/client": "5.22.0",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
@@ -49,6 +52,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
